thesis: Add introduction to section 'Checking'

--- a/thesis/sections/checking.tex
+++ b/thesis/sections/checking.tex
@@ -1,6 +1,20 @@
 \section{Checking}
 \label{sec:checking}
 
+In this section we will outline the process of the actual \textit{verification} of the now implemented architecture.
+The verification process itself is threefold:
+Before any verification can be done, it needs to be clear what shall be verified - not in the sense what the object of verification is but what its goal is, i.e. which properties express the security of the architecture adequately?
+This allows the actual verification of these properties as the next step which will lead to first results.
+In the case of a real world verification attempt these results hopefully are that the system to be verified is perfectly valid - it is, however, most likely that the majority of properties verified will end up with a negative result.
+In this case, the model and/or properties are refined which marks the last step.
+
+Not only will we detail these steps themselves, we will also reflect whether this process of verification is trustworthy by shedding light on the methodology of deriving the concretization of these by now only loosely described steps.
+To outline this, we will answer two questions:
+How do we phrase properties to verify?
+How do we refine the model and/or properties on a verification failure?
+
 \subsection{Checking \& Refinement Methodology}
 
 \subsection{Checked Properties}
+
+\subsection{Trustworthiness of the Verification Process}
