thesis: Add more sections

--- a/thesis/sections/checking.tex
+++ b/thesis/sections/checking.tex
@@ -66,4 +66,6 @@ The domain of confidentiality has yet been left out so we will introduce one fin
     \item Whenever the architecture is in user mode, there is no confidential data in any register.
 \end{enumerate}
 
+\subsubsection{Mitigations \& Refinement}
+
 \subsection{Trustworthiness of the Verification Process}
