--- a/thesis/sections/checking.tex
+++ b/thesis/sections/checking.tex
@@ -63,8 +63,46 @@ We already did this partially in properties \ref{itm:prop-mem-i}and \ref{itm:pro
 These properties, however, only dealt with the integrity labels of information.
 The domain of confidentiality has yet been left out so we will introduce one final property for verification that covers the interplay between privilege mode and confidentiality labels:
 \begin{enumerate}[label=\Roman*.,resume]
-    \item Whenever the architecture is in user mode, there is no confidential data in any register.
+    \item \label{itm:prop-no-leak}
+    Whenever the architecture is in user mode, there is no confidential data in any register.
 \end{enumerate}
+
+The implementation of these five properties is straight-forward.
+Confer code snippets \ref{snpt:prop-mem-i}-\ref{snpt:prop-no-leak} for details.
+
+\begin{smv}[caption={Implementation of property \ref{itm:prop-mem-i}},label={snpt:prop-mem-i}]
+INVARSPEC NAME MEMORY_OP_INTEGRITY :=
+    (priv & op in { LOAD, STORE })
+    -> regs_integrity[rs1] > 0h_03;
+\end{smv}
+
+\begin{smv}[caption={Implementation of property \ref{itm:prop-mem-c}}]
+INVARSPEC NAME MEMORY_OP_CONFIDENTIALITY :=
+    (priv & op in { LOAD, STORE }
+        & memory_conf[read_addr(rs1)] > 0h_00)
+    -> regs_conf[rs1] > 0h_03;
+\end{smv}
+
+\begin{smv}[caption={Implementation of property \ref{itm:prop-csr-i}}]
+INVARSPEC NAME CSR_INTEGRITY :=
+    (priv & op in { CSRRS, CSRRC })
+    -> regs_integrity[rs2] = 0h_FF;
+\end{smv}
+
+\begin{smv}[caption={Implementation of property \ref{itm:prop-mstatus-c}}]
+INVARSPEC NAME MSTATUS_CONFIDENTIALITY :=
+    (priv & op in { CSRRS, CSRRC })
+    -> regs_conf[rs2] > 0h_0F;
+\end{smv}
+
+\begin{smv}[caption={Implementation of property \ref{itm:prop-no-leak}},label={snpt:prop-no-leak}]
+INVARSPEC NAME NO_LEAK := priv | (
+    regs_conf[0] = 0h_00
+    & regs_conf[1] = 0h_00
+    & regs_conf[2] = 0h_00
+    & regs_conf[3] = 0h_00
+);
+\end{smv}
 
 \subsubsection{Mitigations \& Refinement}
 
